--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/cli": "4.23.1",
     "@aws-amplify/ui-react": "^0.2.9",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.7.0",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aws-amplify": "^3.0.18",
+    "aws-sdk": "^2.1062.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.8.0",
